# cowmail-server

./: README.md  meson.build
src/: libcowmail.h  main.c  meson.build  tests.c
